--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,10 +9,10 @@ spring:
   datasource:
     hikari:
       maximum-pool-size: 10
-    url: jdbc:h2:mem:testdb
+    url: jdbc:h2:tcp://localhost:1521/testdb
     driver-class-name: org.h2.Driver
     username: sa
-    password: password
+    password:
 
   batch:
     jdbc:
