--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
 
   batch:
     job:
-      name: deleteUserJob
+      name: mybatisJob
 
 mybatis:
   mapper-locations: classpath:/mapper/**/*.xml
